fix header filling when on narrow browser (i.e. smart phone)

--- a/css/style-small.css
+++ b/css/style-small.css
@@ -28,7 +28,6 @@
 /* Section/Article */
 
 	header.major {
-		width: 90%;
 		margin: 0 auto;
 	}
 
